# azor

./: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
connector/: Cargo.toml
connector/src/: main.rs
dashboard/: .prettierrc.json  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: bulletPoints.tsx  command.tsx  copilotMessage.tsx  customerMessage.tsx  input.tsx  mob.tsx  navbar.tsx  operatorMessage.tsx  panel-layout.tsx  pc.tsx  px.tsx  separator.tsx  sidebar.tsx  start.tsx  themeToggle.tsx  wall.tsx
dashboard/app/components/chat/: ai-message.tsx  chat-input.tsx  chat-panel.tsx  index.ts  operator-question.tsx  reference-box.tsx
dashboard/app/components/copilotPanel/: chatInput.tsx  copilotPanelContent.tsx  emptyCopilotChat.tsx  index.ts  types.ts
dashboard/app/components/documents/: document-card.tsx  document-panel.tsx
dashboard/app/context/: app.tsx
dashboard/app/icons/: favicon.tsx
dashboard/app/lib/: recording-worklet.ts
dashboard/components/ui/: avatar.tsx  badge.tsx  button-group.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  input.tsx  resizable.tsx  separator.tsx  textarea.tsx
dashboard/lib/: animations.ts  utils.ts
dashboard/public/worklets/: recording-worklet.js
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs  state.rs  util.rs
server/src/api/: auth.rs  call.rs  calls.rs  documents.rs  error.rs  health.rs  intelligence.rs  mod.rs  uploads.rs
server/src/call/: asr.rs  events.rs  intelligence.rs  mod.rs
server/src/db/: mod.rs
server/src/db/migrations/: 0001_users.surql  0002_uploads.surql  0003_documents.surql  0004_chunks.surql  0005_conversations.surql  0006_events.surql  20260313000001_uploads.surql  20260313000002_documents.surql  20260313000003_chunks.surql  20260320000001_intelligence.surql  20260321113053_users.surql  20260321115159_calls.surql  20260321120000_conversations.surql  20260321120001_messages.surql  mod.rs
server/src/ingest/: chunk.rs  embed.rs  mod.rs  notion.rs
(+12 files in other folders)
