[workspace]
members = ["server", "connector"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
needless_for_each = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
