[package]
name = "azor-server"
edition.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envy = "0.4"
surrealdb = { version = "3", features = ["protocol-ws"] }
text-splitter = { version = "0.29", features = ["markdown", "tiktoken-rs"] }
thiserror = "2"
tiktoken-rs = "0.9"
urlencoding = "2"
zip = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
llm = { version = "1.3", default-features = false, features = ["openrouter", "rustls-tls"] }
futures = "0.3"
tokio-stream = "0.1"
jsonwebtoken = "10.3.0"

[lints]
workspace = true
